2010-09-27	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/rlm_perl_packetfence.pl, UPGRADE: Re-worked the 
	module to work on post-auth calls instead of authorize calls. This 
	avoid work being done when the EAP credentials don't even pass and
	improves overall correctness of the system (autoregistration in this
	module is now possible). It can also improve performance in network 
	with a lot of wrong 802.1X requests as they no longer exercise the 
	PacketFence module. Backport of fix #1034 from trunk;
	http://www.packetfence.org/bugs/view.php?id=1034

	* pf/conf/dhcp_fingerprints.conf: Removed a space in the fingerprints 
	that's causing the Symbian OS to be the universal fingerprint for
	nodes that don't have a fingerprint.

2010-09-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/rlm_perl_packetfence.pl: got rid of an unnecessary
	te1st

2010-09-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/radius.pm, pf/lib/pf/vlan.pm: Added RADIUS User-Name to the 
	method signature of pf::vlan::getNodeInfoForAutoReg. Allows to record 
	the username of a node that would be automatically registered by policy.
	Fixes #1000;
	http://www.packetfence.org/bugs/view.php?id=1000

	* Added pf/lib/pf/mod_perl_require.pl, modified 
	pf/conf/templates/httpd.conf.apache22: Pre-loading PacketFence modules
	using a PerlRequire statement. Improves per-request latency and overall
	performance. Thanks to Josh Ward from University of Oregon for the 
	initial research on the fix!

	* Renamed pf/cgi-bin/pdp.cgi to pf/lib/pf/WebAPI.pm, modified
	pf/addons/802.1X/rlm_perl_packetfence_soap.pl, 
	pf/conf/templates/httpd.conf.apache22, pf/lib/pf/WebAPI.pm,
	pf/lib/pf/radius.pm, pf/lib/pf/vlan.pm, pf/t/critic.t, pf/t/pod.t
	pf/t/podCoverage.t, pf/t/stress-test/soap-calls-radius_authorize
	pf/t/stress-test/soap-calls-snort, 
	pf/addons/pfdetect_remote/sbin/pfdetect_remote: Ported cgi-bin/pdp.cgi
	SOAP CGI handler to full blown mod_perl SOAP-Lite hosted module. 